Caching Done with Redis (#7)
* Caching Done with Redis

* added missing test files
